// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when authenticated renders 1`] = `
<div>
  <WithStyles(CssBaseline) />
  <WithStyles(AppHeader) />
  <AppBody />
</div>
`;

exports[`App when not authenticated renders 1`] = `
<div>
  <WithStyles(CssBaseline) />
  <WithStyles(AppHeader) />
  <WithStyles(Login) />
</div>
`;
